sumo/tests/jtrrouter/errors/network/edge/lane/root__edge__lane#length__ungiven11/errors.jtrrouter
Error: Attribute 'length' is missing in definition of lane '1_0'.
Quitting (on error).
